--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 
 dependencies:
   cached_network_image: ^3.2.3
-  file_picker: 5.2.11
+  file_picker: 5.2.6
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
   image_picker: ^0.8.7+5
+  wakelock: ^0.6.2
+  wakelock_windows: ^0.2.1
   intl: ^0.18.0
   json_annotation: ^4.7.0
   uuid: ^3.0.7
@@ -21,6 +23,8 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  win32: ^3.0.0
+
   flutter_test:
     sdk: flutter
 
