--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,16 @@ dependencies:
   json_annotation: ^4.7.0
   uuid: ^3.0.7
   web_socket_channel: ^2.4.0
+  dio: ^4.0.6
+  retrofit: ^3.3.1
+
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   win32: ^3.0.0
+  build_runner: "^2.1.0"
+  json_serializable: ^6.5.4
 
   flutter_test:
     sdk: flutter
