--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.0
   win32: ^3.0.0
-
+  analyzer: ^5.2.0
   flutter_test:
     sdk: flutter
 
