--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   file_picker: 5.2.6
   flutter:
     sdk: flutter
+  flutter_emoji: ^2.5.1
   google_fonts: ^3.0.1
   image_picker: ^0.8.7+5
   intl: ^0.18.0
@@ -23,6 +24,15 @@ dependencies:
   wakelock: ^0.6.2
   wakelock_windows: ^0.2.1
   web_socket_channel: ^2.4.0
+  video_player: ^2.7.0
+  gallery_saver: ^2.3.2
+  open_file: ^3.3.2
+  permission_handler: ^10.2.0
+  camera: ^0.10.5+3
+  circular_countdown_timer: 0.2.1
+  holding_gesture: 1.1.0
+  wechat_assets_picker: 8.0.0
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
