--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,30 +10,31 @@ environment:
 dependencies:
   analyzer: ^5.2.0
   cached_network_image: ^3.2.3
+  camera: ^0.10.5+3
+  circular_countdown_timer: 0.2.1
   dio: ^4.0.6
+  ffi: 2.0.1
   file_picker: 5.2.6
   flutter:
     sdk: flutter
   flutter_emoji: ^2.5.1
   flutter_screenutil: ^5.6.0
+  gallery_saver: ^2.3.2
   google_fonts: ^3.0.1
-  ffi: 2.0.1
+  holding_gesture: 1.1.0
   image_picker: ^0.8.7+5
   intl: ^0.18.0
   path: ^1.8.2
+  fluttertoast: ^8.1.2
   path_provider: ^2.0.11
+  permission_handler: ^10.2.0
+
   uuid: ^3.0.7
+  video_player: ^2.7.0
   wakelock: ^0.6.2
   wakelock_windows: ^0.2.1
   web_socket_channel: ^2.4.0
-  video_player: ^2.7.0
-  gallery_saver: ^2.3.2
-  permission_handler: ^10.2.0
-  camera: ^0.10.5+3
-  circular_countdown_timer: 0.2.1
-  holding_gesture: 1.1.0
   wechat_assets_picker: 8.0.0
-  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -58,6 +59,7 @@ flutter:
   assets:
     - assets/
     - assets/imgs/
+
 
 #
 # For details regarding assets in packages, see
