--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   analyzer: ^5.2.0
   camera: ^0.10.5+3
+  flutter_svg: 1.1.6
   cached_network_image: ^3.2.3
   circular_countdown_timer: 0.2.1
   dio: ^4.0.6
