--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dio: ^4.0.6
   ffi: 2.0.1
   file_picker: 5.2.6
+  flutter_html: ^2.2.1
   flutter:
     sdk: flutter
   flutter_emoji: ^2.5.1
