--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   wakelock_windows: ^0.2.1
   web_socket_channel: ^2.4.0
   wechat_assets_picker: 8.0.0
+  open_filex: ^4.3.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
