--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   rive: 0.11.2
+  fluttertoast: ^8.1.2
+
   flutter:
     sdk: flutter
   cardoctor_chatapp:
@@ -68,6 +70,7 @@ flutter:
   assets:
     - assets/
     - assets/animations/
+    - assets/imgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
