--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -29,7 +29,7 @@ subprojects {
 
 
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 subprojects {
